--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.notificationservicetest">
+    package="com.myAccount">
 
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NotificationServiceTest">
+        android:theme="@style/Theme.myAccount">
 
-        <service android:name=".NotificationListenerCustom"
+        <service android:name="com.myAccount.NotificationListenerCustom"
             android:label="@string/service_name"
             android:enabled="true"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
@@ -22,7 +22,7 @@
         </service> <!-- android:exported="false"-->
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.myAccount.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
