--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation  "org.greenrobot:eventbus:3.3.1"
+    implementation "org.greenrobot:eventbus:3.3.1"
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 }
